Fixed vertical align of post bubbles

--- a/_src/sass/_blog.scss
+++ b/_src/sass/_blog.scss
@@ -30,10 +30,9 @@
       color: #fff;
       font-size: $bubble-font-size;
       font-weight: 600;
-      line-height: 0.75;
+      line-height: 0.75em;
       padding: .25em 1em;
       text-align: center;
-      vertical-align: 30%;
     }
 
     & .category {
